--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/customer
+spring.datasource.username=amigoscode
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.format_sql=true
+server.error.include-message=always
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
